--- a/index.html
+++ b/index.html
@@ -202,6 +202,6 @@
         </div>
 
     <!-- JavaScript -->
-        <script src="/main.js"></script>
+        <script src="/netflix-clone/main.js"></script>
 </body>
 </html>
